# charlie

./: .env.evolution  .gitignore  LICENSE  README.md  docker-compose.yaml
dispatcher/: Dockerfile  config.py  evolution.py  main.py  models.py  pyproject.toml
intent-parser/: Dockerfile  chit_chat.py  config.py  intents.py  main.py  models.py  pyproject.toml  rabbitmq.py
intent-parser/pretrained_models/: intent_classifier.ipynb
webhook/: Dockerfile  config.py  main.py  models.py  pyproject.toml  rabbitmq.py
