[project]
name = "intent-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "pika>=1.3.2",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "096f25ae1f501a084d8ff2dcaf25fbc2bd60eba4" }
